--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/openapi-types": "^22.2.0",
+    "@octokit/plugin-retry": "^7.1.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
