Use GITHUB_TOKEN.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print Output
         id: output
