--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    "lib": ["es5", "es6", "dom", "dom.iterable"],
     "target": "ES2022",
     "module": "NodeNext",
     "rootDir": "./src",
