--- a/action.yml
+++ b/action.yml
@@ -1,23 +1,11 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'mlpack PR auto-approval'
+description: 'Approve a PR 24 hours after it has been approved by a maintainer'
+author: 'Ryan Curtin'
 
-# Add your action's branding here. This will appear on the GitHub Marketplace.
-branding:
-  icon: 'heart'
-  color: 'red'
-
-# Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  repo-token:
+    description: 'Github repository token'
     required: true
-    default: '1000'
-
-# Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
 
 runs:
   using: node20
