--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
       - name: Test Local Action
         id: test-action
         uses: ./
+        permissions:
+          pull-requests: write
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           approval-message:
