Add both actions to a single repository.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
           - patch
 
   - package-ecosystem: npm
-    directory: /
+    directory: /auto-approve/
     schedule:
       interval: weekly
     groups:
