--- a/.github/linters/tsconfig.json
+++ b/.github/linters/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "noEmit": true
   },
-  "include": ["../../__tests__/**/*", "../../src/**/*"],
-  "exclude": ["../../dist", "../../node_modules", "../../coverage", "*.json"]
+  "include": ["../../auto-approve/__tests__/**/*", "../../auto-approve/src/**/*"],
+  "exclude": ["../../auto-approve/dist", "../../auto-approve/node_modules", "../../auto-approve/coverage", "*.json"]
 }
