--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,24 +24,29 @@ jobs:
       - name: Setup Node.js
         id: setup-node
         uses: actions/setup-node@v4
+        working-directory: ./auto-approve/
         with:
           node-version-file: .node-version
           cache: npm
 
       - name: Install Dependencies
         id: npm-ci
+        working-directory: ./auto-approve/
         run: npm ci
 
       - name: Check Format
         id: npm-format-check
+        working-directory: ./auto-approve/
         run: npm run format:check
 
       - name: Lint
         id: npm-lint
+        working-directory: ./auto-approve/
         run: npm run lint
 
       - name: Test
         id: npm-ci-test
+        working-directory: ./auto-approve/
         run: npm run ci-test
 
   test-action:
@@ -57,7 +62,7 @@ jobs:
 
       - name: Test Local Action
         id: test-action
-        uses: ./
+        uses: ./auto-approve/
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           approval-message:
