--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -28,17 +28,20 @@ jobs:
       - name: Setup Node.js
         id: setup-node
         uses: actions/setup-node@v4
+        working-directory: ./auto-approve/
         with:
           node-version-file: .node-version
           cache: npm
 
       - name: Install Dependencies
         id: install
+        working-directory: ./auto-approve/
         run: npm ci
 
       - name: Lint Codebase
         id: super-linter
         uses: super-linter/super-linter/slim@v6
+        working-directory: ./auto-approve/
         env:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: dist/**/*
