--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -24,6 +24,9 @@ jobs:
   check-dist:
     name: Check dist/
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./auto-approve
 
     steps:
       - name: Checkout
@@ -31,7 +34,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        working-directory: ./auto-approve
         id: setup-node
         uses: actions/setup-node@v4
         with:
@@ -39,19 +41,16 @@ jobs:
           cache: npm
 
       - name: Install Dependencies
-        working-directory: ./auto-approve
         id: install
         run: npm ci
 
       - name: Build dist/ Directory
-        working-directory: ./auto-approve
         id: build
         run: npm run bundle
 
       # This will fail the workflow if the `dist/` directory is different than
       # expected.
       - name: Compare Directories
-        working-directory: ./auto-approve
         id: diff
         run: |
           if [ ! -d dist/ ]; then
@@ -73,4 +72,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: auto-approve/dist/
+          path: dist/
