--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,6 +17,9 @@ jobs:
   lint:
     name: Lint Codebase
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./auto-approve/
 
     steps:
       - name: Checkout
@@ -28,20 +31,18 @@ jobs:
       - name: Setup Node.js
         id: setup-node
         uses: actions/setup-node@v4
-        working-directory: ./auto-approve/
         with:
-          node-version-file: .node-version
+          node-version-file: ./auto-approve/package.json
+          cache-dependency-file: ./auto-approve/package-lock.json
           cache: npm
 
       - name: Install Dependencies
         id: install
-        working-directory: ./auto-approve/
         run: npm ci
 
       - name: Lint Codebase
         id: super-linter
         uses: super-linter/super-linter/slim@v6
-        working-directory: ./auto-approve/
         env:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: dist/**/*
