Try to fix a few more issues...

--- a/auto-approve/.eslintrc.yml
+++ b/auto-approve/.eslintrc.yml
@@ -21,7 +21,7 @@ parserOptions:
   sourceType: module
   project:
     - '../.github/linters/tsconfig.json'
-    - './tsconfig.json'
+    - './auto-approve/tsconfig.json'
 
 plugins:
   - jest
