--- a/.github/linters/tsconfig.json
+++ b/.github/linters/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "../../tsconfig.json",
+  "extends": "../../auto-approve/tsconfig.json",
   "compilerOptions": {
     "noEmit": true
   },
