--- a/auto-approve/.eslintrc.yml
+++ b/auto-approve/.eslintrc.yml
@@ -21,7 +21,7 @@ parserOptions:
   sourceType: module
   project:
     - '../.github/linters/tsconfig.json'
-    - './auto-approve/tsconfig.json'
+    - './tsconfig.json'
 
 plugins:
   - jest
@@ -41,6 +41,7 @@ rules:
     'eslint-comments/no-unused-disable': 'off',
     'i18n-text/no-en': 'off',
     'import/no-namespace': 'off',
+    'import/no-unresolved': 'off',
     'no-console': 'off',
     'no-unused-vars': 'off',
     'prettier/prettier': 'error',
@@ -56,7 +57,7 @@ rules:
     '@typescript-eslint/func-call-spacing': ['error', 'never'],
     '@typescript-eslint/no-array-constructor': 'error',
     '@typescript-eslint/no-empty-interface': 'error',
-    '@typescript-eslint/no-explicit-any': 'error',
+    '@typescript-eslint/no-explicit-any': 'off',
     '@typescript-eslint/no-extraneous-class': 'error',
     '@typescript-eslint/no-for-in-array': 'error',
     '@typescript-eslint/no-inferrable-types': 'error',
