Try to fix permissions in Docker container.

--- a/stickers/Dockerfile
+++ b/stickers/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:20.10-buster-slim
 
-WORKDIR /
-COPY . .
+USER root
+RUN useradd -m node
+WORKDIR /home/node/
 USER node
+COPY . .
 
 RUN npm install --production
 
